[package]
name = "skill-list-backend"
version = "0.1.0"
edition = "2021"
authors = ["Skill List Contributors"]
description = "Formally verified Rust backend for Skill List application"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.7"
actix-rt = "2.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Environment and configuration
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
actix-rt = "2.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
